- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the
  whole set of processed instances (as with fail and solv), while before it was with respect to the
  set of instances where no solver failed (eval set); thus, now proc = fail + time + solv.

performance improvements:
- improve propagation of absolute-value expression in the case that the sign of the argument is fixed

interface:
- time limit of SCIP-infinity is converted to LPI-infinity when setting it

Makefile:
- revise sub-makefiles for MSVC on MinGW
- fix bug in 'dll' target
- make shared libraries aware of their dependencies
- link binary to shared libs when compiling with SHARED=true

SCIP version 3.2.1
==================

features:
- new interactive shell command "write history" to write the command line history (only when compiled with Readline)
- several improvements of SCIP-Jack (STP application): extended presolving for STP variants, STP-specific branching
  rule, dual heuristic to generate initial LP relaxation
  SCIP-Jack is now competitive with problem specific state-of-the-art solvers on several well-known STP variants,
  e.g., the (rooted) prize-collecting Steiner tree problem.
- MultiObjective application renamed to PolySCIP; several improvements: better command line argument processing,
  overhaul of much of the source code, installation via CMake
- extended python interface supporting callbacks and linear and quadratic expressions

parameters:
- new parameter misc/transsolorig for transfering transformed solutions to the original space (default: true)
- new "force" parameter in (root)redcost propagator to run the propagator also with active pricers
- new parameter propagating/rootredcost/onlybinary to propagate root reduced costs of binary variables only