@@ -12,6 +12,7 @@ fixed bugs:
 - in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the
   whole set of processed instances (as with fail and solv), while before it was with respect to the
   set of instances where no solver failed (eval set); thus, now proc = fail + time + solv.
+- fixed memory leak in OSiL reader
 
 performance improvements:
 - improve propagation of absolute-value expression in the case that the sign of the argument is fixed
